--- a/cca15.ipynb
+++ b/cca15.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        " ...}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,24 +1118,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,1,957,1,299.98,299.98\n",
-      "2,2,1073,1,199.99,199.99\n",
-      "3,2,502,5,250.0,50.0\n",
-      "4,2,403,1,129.99,129.99\n",
-      "5,4,897,2,49.98,24.99\n",
-      "6,4,365,5,299.95,59.99\n",
-      "7,4,502,3,150.0,50.0\n",
-      "8,4,1014,4,199.92,49.98\n",
-      "9,5,957,1,299.98,299.98\n",
-      "10,5,365,5,299.95,59.99\n"
+      "('2013-07-25 00:00:00.0', 31547.230000000014)\n",
+      "('2013-07-26 00:00:00.0', 54713.23000000002)\n",
+      "('2013-07-27 00:00:00.0', 48411.48000000003)\n",
+      "('2013-07-28 00:00:00.0', 35672.03000000004)\n",
+      "('2013-07-29 00:00:00.0', 54579.699999999946)\n",
+      "('2013-07-30 00:00:00.0', 49329.29000000002)\n",
+      "('2013-07-31 00:00:00.0', 59212.490000000056)\n",
+      "('2013-08-01 00:00:00.0', 49160.080000000045)\n",
+      "('2013-08-02 00:00:00.0', 50688.58000000002)\n",
+      "('2013-08-03 00:00:00.0', 43416.74000000001)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "30455"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1145,14 +1155,56 @@
     "    dataList = dataStr.splitlines()\n",
     "    return dataList\n",
     "\n",
+    "def getCompletedOrders(orders):\n",
+    "    ordersFiltered = []\n",
+    "    for order in orders:\n",
+    "        if order.split(',')[3] in ('COMPLETE', 'CLOSED'):\n",
+    "            ordersFiltered.append(order)\n",
+    "    return ordersFiltered\n",
+    "\n",
+    "def getDictForCompletedOrders(orders):\n",
+    "    ordersDict = {}\n",
+    "    for order in orders:\n",
+    "        orderAttributes = order.split(',')\n",
+    "        if orderAttributes[3] in ('COMPLETE', 'CLOSED'):\n",
+    "            ordersDict[int(orderAttributes[0])] = orderAttributes[1]\n",
+    "    return ordersDict\n",
+    "\n",
+    "def getOrderIdAndDateDict(orders):\n",
+    "    orderIdAndDateDict = {}\n",
+    "    for order in orders:\n",
+    "        orderAttributes = order.split(',')\n",
+    "        orderIdAndDateDict[int(orderAttributes[0])] = orderAttributes[1]\n",
+    "    return orderIdAndDateDict\n",
+    "\n",
+    "def getDailyRevenue(orderIdAndDateDict, orderItems):\n",
+    "    dailyRevenue = {}\n",
+    "    for orderItem in orderItems:\n",
+    "        orderItemTuple = (int(orderItem.split(',')[1]), float(orderItem.split(',')[4]))\n",
+    "        if orderIdAndDateDict.get(orderItemTuple[0]):\n",
+    "            orderDate = orderIdAndDateDict[orderItemTuple[0]]\n",
+    "            if dailyRevenue.get(orderDate):\n",
+    "                dailyRevenue[orderDate] += orderItemTuple[1]\n",
+    "            else:\n",
+    "                dailyRevenue[orderDate] = orderItemTuple[1]\n",
+    "    return dailyRevenue\n",
+    "\n",
     "ordersPath = '/data/retail_db/orders/part-00000'\n",
     "orderItemsPath = '/data/retail_db/order_items/part-00000'\n",
     "\n",
     "orders = readData(ordersPath)\n",
     "orderItems = readData(orderItemsPath)\n",
+    "ordersFiltered = getCompletedOrders(orders)\n",
+    "ordersDict = getDictForCompletedOrders(orders)\n",
+    "orderIdAndDateDict = getOrderIdAndDateDict(ordersFiltered)\n",
+    "dailyRevenue = getDailyRevenue(orderIdAndDateDict, orderItems)\n",
     "\n",
-    "for i in orderItems[:10]:\n",
-    "    print(i)"
+    "\n",
+    "for i in list(dailyRevenue.items())[:10]:\n",
+    "    print(i)\n",
+    "\n",
+    "len(orderIdAndDateDict)\n",
+    "#len(orders)"
    ]
   },
   {
