Updated code to include orders per month

--- a/cca15_exercises.ipynb
+++ b/cca15_exercises.ipynb
@@ -82,6 +82,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2013-07-25 00:00:00.0': 143,\n",
+       " '2013-07-26 00:00:00.0': 269,\n",
+       " '2013-07-27 00:00:00.0': 202,\n",
+       " '2013-07-28 00:00:00.0': 187,\n",
+       " '2013-07-29 00:00:00.0': 253,\n",
+       " '2013-07-30 00:00:00.0': 227,\n",
+       " '2013-07-31 00:00:00.0': 252,\n",
+       " '2013-08-01 00:00:00.0': 246,\n",
+       " '2013-08-02 00:00:00.0': 224,\n",
+       " '2013-08-03 00:00:00.0': 183,\n",
+       " '2013-08-04 00:00:00.0': 187,\n",
+       " '2013-08-05 00:00:00.0': 153,\n",
+       " '2013-08-06 00:00:00.0': 258,\n",
+       " '2013-08-07 00:00:00.0': 203,\n",
+       " '2013-08-08 00:00:00.0': 154,\n",
+       " '2013-08-09 00:00:00.0': 125,\n",
+       " '2013-08-10 00:00:00.0': 270,\n",
+       " '2013-08-11 00:00:00.0': 154,\n",
+       " '2013-08-12 00:00:00.0': 255,\n",
+       " '2013-08-13 00:00:00.0': 73,\n",
+       " '2013-08-14 00:00:00.0': 193,\n",
+       " '2013-08-15 00:00:00.0': 200,\n",
+       " '2013-08-16 00:00:00.0': 131,\n",
+       " '2013-08-17 00:00:00.0': 253,\n",
+       " '2013-08-18 00:00:00.0': 199,\n",
+       " '2013-08-19 00:00:00.0': 93,\n",
+       " '2013-08-20 00:00:00.0': 180,\n",
+       " '2013-08-21 00:00:00.0': 122,\n",
+       " '2013-08-22 00:00:00.0': 186,\n",
+       " '2013-08-23 00:00:00.0': 207,\n",
+       " '2013-08-24 00:00:00.0': 265,\n",
+       " '2013-08-25 00:00:00.0': 200,\n",
+       " '2013-08-26 00:00:00.0': 184,\n",
+       " '2013-08-27 00:00:00.0': 188,\n",
+       " '2013-08-28 00:00:00.0': 116,\n",
+       " '2013-08-29 00:00:00.0': 218,\n",
+       " '2013-08-30 00:00:00.0': 114,\n",
+       " '2013-08-31 00:00:00.0': 146,\n",
+       " '2013-09-01 00:00:00.0': 119,\n",
+       " '2013-09-02 00:00:00.0': 202,\n",
+       " '2013-09-03 00:00:00.0': 218,\n",
+       " '2013-09-04 00:00:00.0': 96,\n",
+       " '2013-09-05 00:00:00.0': 261,\n",
+       " '2013-09-06 00:00:00.0': 276,\n",
+       " '2013-09-07 00:00:00.0': 215,\n",
+       " '2013-09-08 00:00:00.0': 173,\n",
+       " '2013-09-09 00:00:00.0': 245,\n",
+       " '2013-09-10 00:00:00.0': 232,\n",
+       " '2013-09-11 00:00:00.0': 109,\n",
+       " '2013-09-12 00:00:00.0': 180,\n",
+       " '2013-09-13 00:00:00.0': 103,\n",
+       " '2013-09-14 00:00:00.0': 276,\n",
+       " '2013-09-15 00:00:00.0': 140,\n",
+       " '2013-09-16 00:00:00.0': 121,\n",
+       " '2013-09-17 00:00:00.0': 134,\n",
+       " '2013-09-18 00:00:00.0': 249,\n",
+       " '2013-09-19 00:00:00.0': 206,\n",
+       " '2013-09-20 00:00:00.0': 139,\n",
+       " '2013-09-21 00:00:00.0': 158,\n",
+       " '2013-09-22 00:00:00.0': 192,\n",
+       " '2013-09-23 00:00:00.0': 177,\n",
+       " '2013-09-24 00:00:00.0': 254,\n",
+       " '2013-09-25 00:00:00.0': 277,\n",
+       " '2013-09-26 00:00:00.0': 252,\n",
+       " '2013-09-27 00:00:00.0': 264,\n",
+       " '2013-09-28 00:00:00.0': 202,\n",
+       " '2013-09-29 00:00:00.0': 136,\n",
+       " '2013-09-30 00:00:00.0': 235,\n",
+       " '2013-10-01 00:00:00.0': 111,\n",
+       " '2013-10-02 00:00:00.0': 239,\n",
+       " '2013-10-03 00:00:00.0': 154,\n",
+       " '2013-10-04 00:00:00.0': 287,\n",
+       " '2013-10-05 00:00:00.0': 215,\n",
+       " '2013-10-06 00:00:00.0': 249,\n",
+       " '2013-10-07 00:00:00.0': 101,\n",
+       " '2013-10-08 00:00:00.0': 252,\n",
+       " '2013-10-09 00:00:00.0': 124,\n",
+       " '2013-10-10 00:00:00.0': 155,\n",
+       " '2013-10-11 00:00:00.0': 221,\n",
+       " '2013-10-12 00:00:00.0': 162,\n",
+       " '2013-10-13 00:00:00.0': 277,\n",
+       " '2013-10-14 00:00:00.0': 139,\n",
+       " '2013-10-15 00:00:00.0': 174,\n",
+       " '2013-10-16 00:00:00.0': 127,\n",
+       " '2013-10-17 00:00:00.0': 163,\n",
+       " '2013-10-18 00:00:00.0': 129,\n",
+       " '2013-10-19 00:00:00.0': 188,\n",
+       " '2013-10-20 00:00:00.0': 154,\n",
+       " '2013-10-21 00:00:00.0': 116,\n",
+       " '2013-10-22 00:00:00.0': 125,\n",
+       " '2013-10-23 00:00:00.0': 236,\n",
+       " '2013-10-24 00:00:00.0': 131,\n",
+       " '2013-10-25 00:00:00.0': 158,\n",
+       " '2013-10-26 00:00:00.0': 118,\n",
+       " '2013-10-27 00:00:00.0': 215,\n",
+       " '2013-10-28 00:00:00.0': 153,\n",
+       " '2013-10-29 00:00:00.0': 128,\n",
+       " '2013-10-30 00:00:00.0': 126,\n",
+       " '2013-10-31 00:00:00.0': 208,\n",
+       " '2013-11-01 00:00:00.0': 229,\n",
+       " '2013-11-02 00:00:00.0': 151,\n",
+       " '2013-11-03 00:00:00.0': 347,\n",
+       " '2013-11-04 00:00:00.0': 254,\n",
+       " '2013-11-05 00:00:00.0': 278,\n",
+       " '2013-11-06 00:00:00.0': 234,\n",
+       " '2013-11-07 00:00:00.0': 232,\n",
+       " '2013-11-08 00:00:00.0': 170,\n",
+       " '2013-11-09 00:00:00.0': 253,\n",
+       " '2013-11-10 00:00:00.0': 170,\n",
+       " '2013-11-11 00:00:00.0': 246,\n",
+       " '2013-11-12 00:00:00.0': 182,\n",
+       " '2013-11-13 00:00:00.0': 236,\n",
+       " '2013-11-14 00:00:00.0': 287,\n",
+       " '2013-11-15 00:00:00.0': 135,\n",
+       " '2013-11-16 00:00:00.0': 120,\n",
+       " '2013-11-17 00:00:00.0': 155,\n",
+       " '2013-11-18 00:00:00.0': 179,\n",
+       " '2013-11-19 00:00:00.0': 188,\n",
+       " '2013-11-20 00:00:00.0': 223,\n",
+       " '2013-11-21 00:00:00.0': 143,\n",
+       " '2013-11-22 00:00:00.0': 249,\n",
+       " '2013-11-23 00:00:00.0': 251,\n",
+       " '2013-11-24 00:00:00.0': 292,\n",
+       " '2013-11-25 00:00:00.0': 133,\n",
+       " '2013-11-26 00:00:00.0': 124,\n",
+       " '2013-11-27 00:00:00.0': 164,\n",
+       " '2013-11-28 00:00:00.0': 245,\n",
+       " '2013-11-29 00:00:00.0': 256,\n",
+       " '2013-11-30 00:00:00.0': 255,\n",
+       " '2013-12-01 00:00:00.0': 239,\n",
+       " '2013-12-02 00:00:00.0': 99,\n",
+       " '2013-12-03 00:00:00.0': 237,\n",
+       " '2013-12-04 00:00:00.0': 182,\n",
+       " '2013-12-05 00:00:00.0': 241,\n",
+       " '2013-12-06 00:00:00.0': 256,\n",
+       " '2013-12-07 00:00:00.0': 234,\n",
+       " '2013-12-08 00:00:00.0': 141,\n",
+       " '2013-12-09 00:00:00.0': 145,\n",
+       " '2013-12-10 00:00:00.0': 160,\n",
+       " '2013-12-11 00:00:00.0': 255,\n",
+       " '2013-12-12 00:00:00.0': 157,\n",
+       " '2013-12-13 00:00:00.0': 135,\n",
+       " '2013-12-14 00:00:00.0': 100,\n",
+       " '2013-12-15 00:00:00.0': 220,\n",
+       " '2013-12-16 00:00:00.0': 114,\n",
+       " '2013-12-17 00:00:00.0': 132,\n",
+       " '2013-12-18 00:00:00.0': 230,\n",
+       " '2013-12-19 00:00:00.0': 124,\n",
+       " '2013-12-20 00:00:00.0': 259,\n",
+       " '2013-12-21 00:00:00.0': 215,\n",
+       " '2013-12-22 00:00:00.0': 249,\n",
+       " '2013-12-23 00:00:00.0': 154,\n",
+       " '2013-12-24 00:00:00.0': 170,\n",
+       " '2013-12-25 00:00:00.0': 217,\n",
+       " '2013-12-26 00:00:00.0': 286,\n",
+       " '2013-12-27 00:00:00.0': 162,\n",
+       " '2013-12-28 00:00:00.0': 222,\n",
+       " '2013-12-29 00:00:00.0': 104,\n",
+       " '2013-12-30 00:00:00.0': 187,\n",
+       " '2013-12-31 00:00:00.0': 266,\n",
+       " '2014-01-01 00:00:00.0': 135,\n",
+       " '2014-01-02 00:00:00.0': 111,\n",
+       " '2014-01-03 00:00:00.0': 250,\n",
+       " '2014-01-04 00:00:00.0': 129,\n",
+       " '2014-01-05 00:00:00.0': 266,\n",
+       " '2014-01-06 00:00:00.0': 155,\n",
+       " '2014-01-07 00:00:00.0': 163,\n",
+       " '2014-01-08 00:00:00.0': 122,\n",
+       " '2014-01-09 00:00:00.0': 207,\n",
+       " '2014-01-10 00:00:00.0': 241,\n",
+       " '2014-01-11 00:00:00.0': 281,\n",
+       " '2014-01-12 00:00:00.0': 215,\n",
+       " '2014-01-13 00:00:00.0': 179,\n",
+       " '2014-01-14 00:00:00.0': 209,\n",
+       " '2014-01-15 00:00:00.0': 243,\n",
+       " '2014-01-16 00:00:00.0': 194,\n",
+       " '2014-01-17 00:00:00.0': 149,\n",
+       " '2014-01-18 00:00:00.0': 139,\n",
+       " '2014-01-19 00:00:00.0': 217,\n",
+       " '2014-01-20 00:00:00.0': 203,\n",
+       " '2014-01-21 00:00:00.0': 259,\n",
+       " '2014-01-22 00:00:00.0': 209,\n",
+       " '2014-01-23 00:00:00.0': 220,\n",
+       " '2014-01-24 00:00:00.0': 159,\n",
+       " '2014-01-25 00:00:00.0': 104,\n",
+       " '2014-01-26 00:00:00.0': 154,\n",
+       " '2014-01-27 00:00:00.0': 163,\n",
+       " '2014-01-28 00:00:00.0': 197,\n",
+       " '2014-01-29 00:00:00.0': 158,\n",
+       " '2014-01-30 00:00:00.0': 254,\n",
+       " '2014-01-31 00:00:00.0': 223,\n",
+       " '2014-02-01 00:00:00.0': 278,\n",
+       " '2014-02-02 00:00:00.0': 192,\n",
+       " '2014-02-03 00:00:00.0': 197,\n",
+       " '2014-02-04 00:00:00.0': 151,\n",
+       " '2014-02-05 00:00:00.0': 137,\n",
+       " '2014-02-06 00:00:00.0': 224,\n",
+       " '2014-02-07 00:00:00.0': 228,\n",
+       " '2014-02-08 00:00:00.0': 163,\n",
+       " '2014-02-09 00:00:00.0': 240,\n",
+       " '2014-02-10 00:00:00.0': 232,\n",
+       " '2014-02-11 00:00:00.0': 205,\n",
+       " '2014-02-12 00:00:00.0': 207,\n",
+       " '2014-02-13 00:00:00.0': 203,\n",
+       " '2014-02-14 00:00:00.0': 174,\n",
+       " '2014-02-15 00:00:00.0': 221,\n",
+       " '2014-02-16 00:00:00.0': 253,\n",
+       " '2014-02-17 00:00:00.0': 184,\n",
+       " '2014-02-18 00:00:00.0': 219,\n",
+       " '2014-02-19 00:00:00.0': 268,\n",
+       " '2014-02-20 00:00:00.0': 145,\n",
+       " '2014-02-21 00:00:00.0': 200,\n",
+       " '2014-02-22 00:00:00.0': 128,\n",
+       " '2014-02-23 00:00:00.0': 175,\n",
+       " '2014-02-24 00:00:00.0': 180,\n",
+       " '2014-02-25 00:00:00.0': 259,\n",
+       " '2014-02-26 00:00:00.0': 141,\n",
+       " '2014-02-27 00:00:00.0': 193,\n",
+       " '2014-02-28 00:00:00.0': 238,\n",
+       " '2014-03-01 00:00:00.0': 258,\n",
+       " '2014-03-02 00:00:00.0': 117,\n",
+       " '2014-03-03 00:00:00.0': 266,\n",
+       " '2014-03-04 00:00:00.0': 257,\n",
+       " '2014-03-05 00:00:00.0': 194,\n",
+       " '2014-03-06 00:00:00.0': 216,\n",
+       " '2014-03-07 00:00:00.0': 188,\n",
+       " '2014-03-08 00:00:00.0': 100,\n",
+       " '2014-03-10 00:00:00.0': 235,\n",
+       " '2014-03-11 00:00:00.0': 204,\n",
+       " '2014-03-12 00:00:00.0': 238,\n",
+       " '2014-03-13 00:00:00.0': 165,\n",
+       " '2014-03-14 00:00:00.0': 201,\n",
+       " '2014-03-15 00:00:00.0': 247,\n",
+       " '2014-03-16 00:00:00.0': 187,\n",
+       " '2014-03-17 00:00:00.0': 91,\n",
+       " '2014-03-18 00:00:00.0': 252,\n",
+       " '2014-03-19 00:00:00.0': 130,\n",
+       " '2014-03-20 00:00:00.0': 177,\n",
+       " '2014-03-21 00:00:00.0': 187,\n",
+       " '2014-03-22 00:00:00.0': 223,\n",
+       " '2014-03-23 00:00:00.0': 211,\n",
+       " '2014-03-24 00:00:00.0': 134,\n",
+       " '2014-03-25 00:00:00.0': 113,\n",
+       " '2014-03-26 00:00:00.0': 246,\n",
+       " '2014-03-27 00:00:00.0': 152,\n",
+       " '2014-03-28 00:00:00.0': 180,\n",
+       " '2014-03-29 00:00:00.0': 96,\n",
+       " '2014-03-30 00:00:00.0': 250,\n",
+       " '2014-03-31 00:00:00.0': 263,\n",
+       " '2014-04-01 00:00:00.0': 223,\n",
+       " '2014-04-02 00:00:00.0': 266,\n",
+       " '2014-04-03 00:00:00.0': 241,\n",
+       " '2014-04-04 00:00:00.0': 221,\n",
+       " '2014-04-05 00:00:00.0': 164,\n",
+       " '2014-04-06 00:00:00.0': 108,\n",
+       " '2014-04-07 00:00:00.0': 115,\n",
+       " '2014-04-08 00:00:00.0': 233,\n",
+       " '2014-04-09 00:00:00.0': 261,\n",
+       " '2014-04-10 00:00:00.0': 252,\n",
+       " '2014-04-11 00:00:00.0': 147,\n",
+       " '2014-04-12 00:00:00.0': 232,\n",
+       " '2014-04-13 00:00:00.0': 117,\n",
+       " '2014-04-14 00:00:00.0': 105,\n",
+       " '2014-04-15 00:00:00.0': 180,\n",
+       " '2014-04-16 00:00:00.0': 140,\n",
+       " '2014-04-17 00:00:00.0': 113,\n",
+       " '2014-04-18 00:00:00.0': 232,\n",
+       " '2014-04-19 00:00:00.0': 116,\n",
+       " '2014-04-20 00:00:00.0': 195,\n",
+       " '2014-04-21 00:00:00.0': 266,\n",
+       " '2014-04-22 00:00:00.0': 144,\n",
+       " '2014-04-23 00:00:00.0': 220,\n",
+       " '2014-04-24 00:00:00.0': 124,\n",
+       " '2014-04-25 00:00:00.0': 249,\n",
+       " '2014-04-26 00:00:00.0': 251,\n",
+       " '2014-04-27 00:00:00.0': 258,\n",
+       " '2014-04-28 00:00:00.0': 125,\n",
+       " '2014-04-29 00:00:00.0': 238,\n",
+       " '2014-04-30 00:00:00.0': 121,\n",
+       " '2014-05-01 00:00:00.0': 146,\n",
+       " '2014-05-02 00:00:00.0': 198,\n",
+       " '2014-05-03 00:00:00.0': 192,\n",
+       " '2014-05-04 00:00:00.0': 164,\n",
+       " '2014-05-05 00:00:00.0': 171,\n",
+       " '2014-05-06 00:00:00.0': 265,\n",
+       " '2014-05-07 00:00:00.0': 217,\n",
+       " '2014-05-08 00:00:00.0': 99,\n",
+       " '2014-05-09 00:00:00.0': 263,\n",
+       " '2014-05-10 00:00:00.0': 196,\n",
+       " '2014-05-11 00:00:00.0': 227,\n",
+       " '2014-05-12 00:00:00.0': 246,\n",
+       " '2014-05-13 00:00:00.0': 201,\n",
+       " '2014-05-14 00:00:00.0': 167,\n",
+       " '2014-05-15 00:00:00.0': 149,\n",
+       " '2014-05-16 00:00:00.0': 263,\n",
+       " '2014-05-17 00:00:00.0': 158,\n",
+       " '2014-05-18 00:00:00.0': 185,\n",
+       " '2014-05-19 00:00:00.0': 97,\n",
+       " '2014-05-20 00:00:00.0': 216,\n",
+       " '2014-05-21 00:00:00.0': 212,\n",
+       " '2014-05-22 00:00:00.0': 104,\n",
+       " '2014-05-23 00:00:00.0': 139,\n",
+       " '2014-05-24 00:00:00.0': 213,\n",
+       " '2014-05-25 00:00:00.0': 125,\n",
+       " '2014-05-26 00:00:00.0': 144,\n",
+       " '2014-05-27 00:00:00.0': 85,\n",
+       " '2014-05-28 00:00:00.0': 236,\n",
+       " '2014-05-29 00:00:00.0': 141,\n",
+       " '2014-05-30 00:00:00.0': 102,\n",
+       " '2014-05-31 00:00:00.0': 146,\n",
+       " '2014-06-01 00:00:00.0': 176,\n",
+       " '2014-06-02 00:00:00.0': 228,\n",
+       " '2014-06-03 00:00:00.0': 130,\n",
+       " '2014-06-04 00:00:00.0': 117,\n",
+       " '2014-06-05 00:00:00.0': 155,\n",
+       " '2014-06-06 00:00:00.0': 198,\n",
+       " '2014-06-07 00:00:00.0': 191,\n",
+       " '2014-06-08 00:00:00.0': 225,\n",
+       " '2014-06-09 00:00:00.0': 269,\n",
+       " '2014-06-10 00:00:00.0': 137,\n",
+       " '2014-06-11 00:00:00.0': 132,\n",
+       " '2014-06-12 00:00:00.0': 157,\n",
+       " '2014-06-13 00:00:00.0': 260,\n",
+       " '2014-06-14 00:00:00.0': 255,\n",
+       " '2014-06-15 00:00:00.0': 128,\n",
+       " '2014-06-16 00:00:00.0': 221,\n",
+       " '2014-06-17 00:00:00.0': 142,\n",
+       " '2014-06-18 00:00:00.0': 179,\n",
+       " '2014-06-19 00:00:00.0': 276,\n",
+       " '2014-06-20 00:00:00.0': 140,\n",
+       " '2014-06-21 00:00:00.0': 92,\n",
+       " '2014-06-22 00:00:00.0': 118,\n",
+       " '2014-06-23 00:00:00.0': 149,\n",
+       " '2014-06-24 00:00:00.0': 130,\n",
+       " '2014-06-25 00:00:00.0': 258,\n",
+       " '2014-06-26 00:00:00.0': 168,\n",
+       " '2014-06-27 00:00:00.0': 253,\n",
+       " '2014-06-28 00:00:00.0': 134,\n",
+       " '2014-06-29 00:00:00.0': 121,\n",
+       " '2014-06-30 00:00:00.0': 169,\n",
+       " '2014-07-01 00:00:00.0': 189,\n",
+       " '2014-07-02 00:00:00.0': 131,\n",
+       " '2014-07-03 00:00:00.0': 174,\n",
+       " '2014-07-04 00:00:00.0': 153,\n",
+       " '2014-07-05 00:00:00.0': 233,\n",
+       " '2014-07-06 00:00:00.0': 106,\n",
+       " '2014-07-07 00:00:00.0': 171,\n",
+       " '2014-07-08 00:00:00.0': 260,\n",
+       " '2014-07-09 00:00:00.0': 150,\n",
+       " '2014-07-10 00:00:00.0': 183,\n",
+       " '2014-07-11 00:00:00.0': 138,\n",
+       " '2014-07-12 00:00:00.0': 166,\n",
+       " '2014-07-13 00:00:00.0': 221,\n",
+       " '2014-07-14 00:00:00.0': 161,\n",
+       " '2014-07-15 00:00:00.0': 274,\n",
+       " '2014-07-16 00:00:00.0': 147,\n",
+       " '2014-07-17 00:00:00.0': 162,\n",
+       " '2014-07-18 00:00:00.0': 216,\n",
+       " '2014-07-19 00:00:00.0': 224,\n",
+       " '2014-07-20 00:00:00.0': 285,\n",
+       " '2014-07-21 00:00:00.0': 235,\n",
+       " '2014-07-22 00:00:00.0': 138,\n",
+       " '2014-07-23 00:00:00.0': 166,\n",
+       " '2014-07-24 00:00:00.0': 185}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def OrdersPerMonth(orders):\n",
+    "    MonthOrdersCount = {}\n",
+    "    for order in orders:\n",
+    "        orderAttribute = order.split(',')\n",
+    "        if MonthOrdersCount.get(orderAttribute[1]):\n",
+    "            MonthOrdersCount[orderAttribute[1]] += 1\n",
+    "        else: \n",
+    "            MonthOrdersCount[orderAttribute[1]] = 1\n",
+    "    return MonthOrdersCount\n",
+    "\n",
+    "MonthOrdersCount = OrdersPerMonth(orders)\n",
+    "        \n",
+    "MonthOrdersCount"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
