Commit of all problem solutions

--- a/cca15_exercises.ipynb
+++ b/cca15_exercises.ipynb
@@ -250,6 +250,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getOrderIdAndDateDict(orders):\n",
+    "    orderIdAndDateDict = {}\n",
+    "    for order in orders:\n",
+    "        orderAttributes = order.split(',')\n",
+    "        orderIdAndDateDict[int(orderAttributes[0])] = orderAttributes[1]\n",
+    "    return orderIdAndDateDict\n",
+    "\n",
+    "orderIdAndDateDict = getOrderIdAndDateDict(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDailyProductRevenue(orderIdAndDateDict, orderItems):\n",
+    "    dailyProductRevenue = []\n",
+    "    for orderItem in orderItems:\n",
+    "        orderItemAttribute = orderItem.split(',')\n",
+    "        if orderIdAndDateDict.get(int(orderItemAttribute[1])):\n",
+    "            orderDate = orderIdAndDateDict[int(orderItemAttribute[1])]\n",
+    "            dailyProductRevenue += [[(orderDate,int(orderItemAttribute[2])),float(orderItemAttribute[4])]]\n",
+    "\n",
+    "    return dailyProductRevenue\n",
+    "\n",
+    "dailyProductRevenue = getDailyProductRevenue(orderIdAndDateDict, orderItems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[('2013-07-25 00:00:00.0', 957), 299.98],\n",
+       " [('2013-07-25 00:00:00.0', 1073), 199.99],\n",
+       " [('2013-07-25 00:00:00.0', 502), 250.0],\n",
+       " [('2013-07-25 00:00:00.0', 403), 129.99],\n",
+       " [('2013-07-25 00:00:00.0', 897), 49.98],\n",
+       " [('2013-07-25 00:00:00.0', 365), 299.95],\n",
+       " [('2013-07-25 00:00:00.0', 502), 150.0],\n",
+       " [('2013-07-25 00:00:00.0', 1014), 199.92],\n",
+       " [('2013-07-25 00:00:00.0', 957), 299.98],\n",
+       " [('2013-07-25 00:00:00.0', 365), 299.95]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dailyProductRevenue[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDailyProductRevenue(orderIdAndDateDict, orderItems):\n",
+    "    dailyProductRevenue = {}\n",
+    "    for orderItem in orderItems:\n",
+    "        orderItemAttribute = orderItem.split(',')\n",
+    "        if orderIdAndDateDict.get(int(orderItemAttribute[1])):\n",
+    "            orderDate = orderIdAndDateDict[int(orderItemAttribute[1])]\n",
+    "            orderItemTuple = (orderDate + ' ' + orderItemAttribute[2], float(orderItemAttribute[4]))\n",
+    "            if dailyProductRevenue.get(orderItemTuple[0]):\n",
+    "                dailyProductRevenue[orderItemTuple[0]] += orderItemTuple[1]\n",
+    "            else:\n",
+    "                dailyProductRevenue[orderItemTuple[0]] = orderItemTuple[1]         \n",
+    "    return dailyProductRevenue\n",
+    "\n",
+    "dailyProductRevenue = getDailyProductRevenue(orderIdAndDateDict, orderItems)\n",
+    "\n",
+    "#dailyProductRevenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2013-07-25 00:00:00.0 957', 9599.359999999993),\n",
+       " ('2013-07-25 00:00:00.0 1073', 6999.649999999995),\n",
+       " ('2013-07-25 00:00:00.0 502', 5100.0),\n",
+       " ('2013-07-25 00:00:00.0 403', 5589.569999999994),\n",
+       " ('2013-07-25 00:00:00.0 365', 7558.739999999994),\n",
+       " ('2013-07-25 00:00:00.0 1014', 6397.439999999999),\n",
+       " ('2013-07-25 00:00:00.0 191', 8499.149999999998),\n",
+       " ('2013-07-25 00:00:00.0 627', 2879.2799999999997),\n",
+       " ('2013-07-25 00:00:00.0 1004', 10799.459999999994),\n",
+       " ('2013-07-26 00:00:00.0 403', 10529.189999999986)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dailyProductRevenue1000 = dailyProductRevenue.copy()\n",
+    "for item in dailyProductRevenue:\n",
+    "    if dailyProductRevenue.get(item) <= 1000:\n",
+    "        dailyProductRevenue1000.pop(item)\n",
+    "        \n",
+    "list(dailyProductRevenue1000.items())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
